Fixed sidebar header text unreadable with certain theme lightness

--- a/src/gui/src/css/style.css
+++ b/src/gui/src/css/style.css
@@ -1218,7 +1218,7 @@ span.header-sort-icon img {
     margin: 0;
     font-weight: bold;
     font-size: 13px;
-    color: #8f96a3;
+    color: var(--window-sidebar-title-color, #8f96a3);
     text-shadow: 1px 1px rgb(247 247 247 / 15%);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -1243,7 +1243,7 @@ span.header-sort-icon img {
     margin-top: 2px;
     padding: 4px;
     border-radius: 3px;
-    color: #444444;
+    color: var(--window-sidebar-item-color, #444444);
     font-size: 13px;
     cursor: pointer;
     transition: 0.15s background-color;
